image carousel vertically and horizontally align center and overflow fixed

--- a/src/index.css
+++ b/src/index.css
@@ -415,3 +415,20 @@
     text-align: center;
     vertical-align: middle;
 }
+
+.image-carousel-component .item{
+    text-align: center;
+    white-space: nowrap;
+}
+
+.image-carousel-component .item:before{
+    content: " ";
+    display: inline-block;
+    height: 100%;
+    vertical-align: middle;
+}
+
+.image-carousel-component .item img{
+    vertical-align: middle;
+    display: inline-block;
+}
